--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,14 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-:root{
-  --primary-color: #0DFF92;
-  --dark-color:#222222;
-  --light-color: #f0f0f0;
-}
-
 body, html{
   height: 100%;
-  background: var(--dark-color)
+  background-image: url("background.jpeg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 * > *{
@@ -22,18 +19,13 @@ body, html{
   height: auto;
   width: 800px;
   padding: 20px;
+  background: rgba(255, 255, 255, 0.9);
 }
 
-.container .title{
-    font-size: 3em;
-    text-align: center;
-    border: 5px solid var(--primary-color);
-    padding: .3em .2em;
-    border-radius: 4px;
-}
+
 
 .text-light {
-	color: var(--light-color)
+	color: #222222
 }
 
 .container ul{
@@ -46,14 +38,6 @@ body, html{
 .container .questions{
     padding: 3em;
 }
-
-/* 
-.container .questions .qid{
-  padding: .2em .7em;
-  color: #222222;
-  background-color: #0DFF92;
-  border-radius: 50px;
-} */
 
 .container .grid{
     margin-top: 3em;
@@ -76,7 +60,7 @@ body, html{
 }
 
 .next{
-    background-color: var(--primary-color);
+    background-color: #0DFF92;
     justify-self: flex-end;
 }
 
@@ -86,13 +70,13 @@ body, html{
 }
 
 ul li{
-  color: #AAAAAA;
+  color: #202020;
   display: block;
   position: relative;
   float: left;
   width: 100%;
   height: 100px;
-	border-bottom: 1px solid #333;
+	border-bottom: 1px solid #202020;
 }
 
 ul li input[type=radio]{
@@ -114,13 +98,14 @@ ul li label{
 }
 
 ul li:hover label{
-	color: #FFFFFF;
+	color: #faff5a;
+  background-color: #202020;
 }
 
 ul li .check{
   display: block;
   position: absolute;
-  border: 5px solid #AAAAAA;
+  border: 5px solid #202020;
   border-radius: 100%;
   height: 25px;
   width: 25px;
@@ -151,22 +136,22 @@ ul li .check::before {
 
 
 input[type=radio]:checked ~ .check {
-  border: 5px solid var(--primary-color)
+  border: 5px solid #0DFF92
 }
 
 input[type=radio]:checked ~ .check::before{
-  background: var(--primary-color)
+  background: #0DFF92
 }
 
 input[type=radio]:checked ~ .text-primary{
-  color: var(--primary-color)
+  color: #0DFF92
 } 
 
 /* To get selected option we are using this checked class */
 .checked {
-  border: 5px solid var(--primary-color) !important;
+  border: 5px solid #0DFF92 !important;
 }
 
 .checked::before{
-  background: var(--primary-color)
+  background: #0DFF92
 }
