--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,6 +1,15 @@
-.container ol li{
-    font-size: 1.4em;
-    color: #cecece;
+.container .title{
+    font-size: 3em;
+    text-align: center;
+    padding: .3em .2em;
+    border-radius: 4px;
+    color:#222222;
+}
+
+.container .vice-title{
+    display: flex;
+    justify-content: center;
+    font-size: 1.2em;
 }
 
 .start{
